# django-jsonrpc

./: README.md  pyproject.toml  setup.cfg
jsonrpc/: __init__.py  _json.py  _types.py  exceptions.py  mochikit.py  proxy.py  site.py  views.py
test/: jsontesturls.py  test.py
