[metadata]
name = django_jsonrpc
version = 0.0.1
author = Kalinin Mitko
author_email = kalinin.mitko@gmail.com
description = Django JSON-RPC
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.dev/null-none/django-jsonrpc
project_urls =
    Bug Tracker = https://github.dev/null-none/django-jsonrpc/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = jsonrpc
packages = find:
python_requires = >=3.6

[options.packages.find]
where = jsonrpc